[build-system]
requires = ["pdm-backend", "pdm-build-locked"]
build-backend = "pdm.backend"

[project]
name = "bookshelf"
version = "1.0.0"
description = "Scripts for Bookshelf and the Github pipeline."
authors = [{ name = "Bookshelf Contributors", email = "contact@gunivers.net" }]
dependencies = [
  "beet>=0.108.5",
  "bookshelf[docs]",
  "click>=8.1.7",
  "colorama>=0.4.6",
  "pydantic>=2.9.2",
  "requests>=2.32.3",
]
requires-python = "==3.12.*"
license = { text = "MPL-2.0" }

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.8.3",
  "types-colorama>=0.4.15.20240311",
  "types-docutils>=0.21.0.20241128",
  "types-requests>=2.32.0.20241016",
]
docs = [
  "linkify-it-py>=2.0.3",
  "myst-parser>=4.0.0",
  "pydata-sphinx-theme>=0.16.0",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-togglebutton>=0.3.2",
  "sphinx-treeview>=0.1.3",
  "sphinx>=8.1.3",
]

[project.scripts]
docs = "core.cli.docs:docs"
meta = "core.cli.meta:meta"
modules = "core.cli.modules:modules"

[tool.mypy]
files = ["core", "modules"]
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
namespace-packages = ["core"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D203", "D213", "INP001", "S603", "UP017"]
